[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom_command"
version = "0.0.1"
authors = [
  { name="FirstName LastName", email="mail@example.com" },
]
description = "Template package that provides a custom executable command"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Private :: Do not Upload",
]
dependencies = [
    "requests>=2",
]

[project.urls]
Homepage = "https://github.com/bruot/custom-command"
Issues = "https://github.com/bruot/custom-command/issues"

[project.scripts]
get-status-code = "custom_command.get_status_code:main"
